<resources>
    <string name="app_name">Voluntiers</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="validation_failed">Validation fail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="logo">Logo</string>
    <string name="main">Main</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="salve">Salve</string>
    <string name="delete">Delete</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="image_home_screen">image home screen</string>
    <string name="o_item_foi_salvo">O item foi salvo.</string>
    <string name="cancel">Cancel</string>
    <string name="error_on_get_content">Error on get content</string>
</resources>