<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main"
        android:title="@string/main" />
    <item
        android:id="@+id/home"
        android:title="@string/home" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/login"
        android:title="@string/login" />
    <item
        android:id="@+id/help"
        android:title="@string/help" />
    <group
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <item
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="logout" />
    </group>

</menu>